kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-backend
  namespace: employee-management

spec:
  replicas: 2

  selector:
    matchLabels:
      app: employee-backend

  template:
    metadata:
      labels:
        app: employee-backend

    spec:
      containers:
        - name: backend
          image: employee-management-dk-backend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 5000
