kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-frontend
  namespace: employee-management

spec:
  replicas: 2

  selector:
    matchLabels:
      app: employee-frontend

  template:
    metadata:
      labels:
        app: employee-frontend

    spec:
      containers:
        - name: frontend
          image: employee-management-dk-frontend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 80
