kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: employee-management

spec:
  selector:
    app: employee-frontend

  ports:
    - port: 80
      targetPort: 80

  type: NodePort
